<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_view_cosmos_every_day"
        android:icon="@drawable/ic_earth"
        android:title="@string/cosmos" />

    <item
        android:id="@+id/action_view_study_layout"
        android:icon="@drawable/ic_mars"
        android:title="@string/layouts" />

    <item
        android:id="@+id/action_view_system"
        android:icon="@drawable/ic_system"
        android:title="@string/bottomBar" />
    <item
        android:id="@+id/action_view_text_fragment"
        android:icon="@drawable/ic_earth"
        android:title="@string/text" />

    <item
        android:id="@+id/action_view_settings"
        android:icon="@drawable/ic_mars"
        android:title="@string/settings" />
</menu>
