<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/PictureOfTheDayFragment">

    <fragment
        android:id="@+id/PictureOfTheDayFragment"
        android:name="ru.geekbrains.myappmaterialdesign.view.PictureOfTheDayFragment"
        android:label="@string/picture_of_the_day_fragment_label"
        tools:layout="@layout/fragment_picture_of_the_day">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="ru.geekbrains.myappmaterialdesign.view.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/PictureOfTheDayFragment" />
    </fragment>
    <fragment
        android:id="@+id/SettingsFragment"
        android:name="ru.geekbrains.myappmaterialdesign.view.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/action_SettingsFragment_to_FirstFragment"
            app:destination="@id/PictureOfTheDayFragment" />
    </fragment>
    <fragment
        android:id="@+id/EarthFragment"
        android:name="ru.geekbrains.myappmaterialdesign.view.navigation.EarthFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_earth" />
    <fragment
        android:id="@+id/SystemFragment"
        android:name="ru.geekbrains.myappmaterialdesign.view.navigation.SystemFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_system" />
    <fragment
        android:id="@+id/MarsFragment"
        android:name="ru.geekbrains.myappmaterialdesign.view.navigation.MarsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_mars" />
</navigation>